handle kae exceptions during execution